[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/icons/white/icon_close.svg" type="Texture" id=1]
[ext_resource path="res://src/widgets/sidebar/Sidebar.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Poppins-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Poppins-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/icons/white/icon_refresh.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/white/icon_download.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/white/icon_randomize.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.141176, 0.14902, 0.152941, 1 )
border_width_right = 1
border_color = Color( 0.270588, 0.270588, 0.270588, 0.705882 )
shadow_color = Color( 0, 0, 0, 0.109804 )
shadow_size = 17

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "slide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -300, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Sidebar" type="HBoxContainer"]
anchor_bottom = 1.0
margin_right = 350.0
margin_bottom = 12000.0
rect_min_size = Vector2( 300, 400 )
size_flags_horizontal = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 300.0
margin_bottom = 9600.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 299.0
margin_bottom = 9600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_right = 299.0
margin_bottom = 52.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TitleHBox" type="HBoxContainer" parent="Panel/VBoxContainer/TitleMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 289.0
margin_bottom = 42.0
custom_constants/separation = 7

[node name="Title" type="Label" parent="Panel/VBoxContainer/TitleMargin/TitleHBox"]
margin_right = 131.0
margin_bottom = 32.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 4 )
text = "generatory"

[node name="Version" type="Label" parent="Panel/VBoxContainer/TitleMargin/TitleHBox"]
margin_left = 138.0
margin_top = 9.0
margin_right = 165.0
margin_bottom = 32.0
size_flags_vertical = 8
custom_colors/font_color = Color( 1, 1, 1, 0.65098 )
custom_fonts/font = SubResource( 5 )
text = "v0.1"

[node name="OptionsMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 299.0
margin_bottom = 9600.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/OptionsMargin"]
margin_left = 10.0
margin_right = 289.0
margin_bottom = 9534.0
custom_constants/separation = 10

[node name="GenerateButton" type="Button" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer"]
margin_right = 279.0
margin_bottom = 20.0
text = "Generate"
icon = ExtResource( 5 )
expand_icon = true

[node name="RandomizeButton" type="Button" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer"]
margin_top = 30.0
margin_right = 279.0
margin_bottom = 50.0
text = "Randomize"
icon = ExtResource( 7 )
expand_icon = true

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer"]
margin_top = 60.0
margin_right = 279.0
margin_bottom = 80.0
text = "Save Current"
icon = ExtResource( 6 )
expand_icon = true

[node name="Separator" type="ColorRect" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer"]
margin_top = 90.0
margin_right = 279.0
margin_bottom = 90.0

[node name="GeneratorOptionButton" type="OptionButton" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer"]
margin_top = 100.0
margin_right = 279.0
margin_bottom = 120.0
text = "Generator"
flat = true

[node name="OptionsScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer"]
margin_top = 130.0
margin_right = 279.0
margin_bottom = 9534.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsVBox" type="VBoxContainer" parent="Panel/VBoxContainer/OptionsMargin/VBoxContainer/OptionsScrollContainer"]
margin_right = 279.0
size_flags_horizontal = 3

[node name="ButtonMargin" type="MarginContainer" parent="."]
margin_left = 304.0
margin_right = 350.0
margin_bottom = 9600.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="ButtonMargin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 35.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/slide = SubResource( 2 )

[connection signal="pressed" from="Panel/VBoxContainer/OptionsMargin/VBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsMargin/VBoxContainer/RandomizeButton" to="." method="_on_RandomizeButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsMargin/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/OptionsMargin/VBoxContainer/GeneratorOptionButton" to="." method="_on_GeneratorOptionButton_item_selected"]
[connection signal="pressed" from="ButtonMargin/CloseButton" to="." method="_on_CloseButton_pressed"]
